--- a/payment.html
+++ b/payment.html
@@ -52,7 +52,7 @@
             <h3>Shopping Item</h3>
             <h4>Remove</h4>
 
-            <img src="Air-Jordanvans.jpg" alt="shoes picture" />
+            <img src="/img/Air-Jordanvans.jpg" alt="shoes picture" />
           </div>
 
           <section class="payment__section">
