pages container modified

--- a/registration.html
+++ b/registration.html
@@ -32,18 +32,8 @@
             </div>
             <br>
             <div>
-                <label for="age">Age</label>
-                <input type="number" id="age" name="age"required>
-            </div>
-            <br>
-            <div>
                 <label for="dateOfBirth">Date Of Birth</label>
                 <input type="date" id="dateOfBirth" name="dateOfBirth" required>
-            </div>
-            <br>
-            <div>
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email" required>
             </div>
             <br>
             <div>
@@ -52,6 +42,16 @@
                 <input type="radio" id="male" name="gender">
                 <label for="female"> &nbsp; Female</label>
                 <input type="radio" id="female" name="gender">
+            </div>
+            <br>
+            <div>
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <br>
+            <div>
+                <label for="email">Phone</label>
+                <input type="phone" id="phone" name="phone" required>
             </div>
             <br>
             <div>
