script code refactored

--- a/registration.html
+++ b/registration.html
@@ -50,7 +50,7 @@
             </div>
             <br>
             <div>
-                <label for="email">Phone</label>
+                <label for="phone">Phone</label>
                 <input type="phone" id="phone" name="phone" required>
             </div>
             <br>
