--- a/cart.html
+++ b/cart.html
@@ -20,7 +20,69 @@
     
     <fieldset class="cart container">
         <legend>Your Products</legend>
-        <h3>Oops!! Your Cart is Empty ..</h3>
+        <br>
+        <div class="products">
+            <table>
+                <thead>
+                    <tr>
+                        <th style="width: 18%;">Items</th>
+                        <th style="width: 31%;">Description</th>
+                        <th style="width: 12%;">Price</th>
+                        <th style="width: 27%;">Quantity</th>
+                        <th style="width: 12%;">Total</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td><img src="/src/images/men-jacket.webp" alt="Men's winter jacket" width="125px" height="120px"></td>
+                        <td style="padding: 0.5rem;">The versatile travel jacket is engineered with graphene,<br>to take on colder climates.</td>
+                        <td>€ 199.00</td>
+                        <td style="word-spacing: 0.6rem;">
+                            <button>+</button> <span>1</span> <button>-</button> <i class="fa-solid fa-trash"></i>
+                        </td>
+                        <td><span>€ 199.00</span></td>
+                    </tr>
+                    <tr>
+                        <td><img src="/src/images/women-jacket.webp" alt="Women's winter jacket" width="125px" height="120px"></td>
+                        <td style="padding: 0.5rem;">Puffer Jacket Winter Coat Comfort Street Loose Daily Casual</td>
+                        <td>€ 52.99</td>
+                        <td style="word-spacing: 0.6rem;">
+                            <button>+</button> <span>1</span> <button>-</button> <i class="fa-solid fa-trash"></i>
+                        </td>
+                        <td><span>€ 52.99</span></td>
+                    </tr>
+                    <tr>
+                        <td colspan="3"></td>
+                        <td>SubTotal<br>
+                            Discount 15%<br>
+                            Shipping<br>
+                            Total :
+                        </td>
+                        <td>€ 251.99<br>
+                            € 37.79<br>
+                            € 2.99<br>
+                            € 217.19
+                        </td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td colspan="3">
+                            <hr>
+                            <br>
+                            <div class="flex-main payment">
+                                <button>Checkout</button>
+                                <i class="fa-brands fa-ideal"></i>
+                                <i class="fa-brands fa-cc-mastercard"></i>
+                                <i class="fa-brands fa-paypal"></i>
+                                <i class="fa-solid fa-credit-card"></i>
+                                <i class="fa-brands fa-cc-visa"></i>
+                            </div>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </fieldset>
 
     <div class="shopping-cart shopping-cart1"></div>
