--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
          <div class="navbar__lists">
                 <i class="fa-solid fa-shoe-prints navbar__icon navbar__icon"></i>
                 <ul class="navbar__list">
-                    <li><a href="#">product.html</a>Men</li>
-                    <li><a href=""></a>Women</li>
-                    <li><a href=""></a>Accessories</li>
-                    <li><a href="">sale</a></li>
+                    <li><a href="/product.html">Men</a></li>
+                    <li><a href="">Women</a></li>
+                    <li><a href="">Accessories</a></li>
+                    <li><a href="/payment.html">sale</a></li>
                 </ul>
 
             </div>
