--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 
         <main> 
             <div class="banner">
-                <span class="badge">
+                <a  class="badge" href="./signup.html"
                     SHOP NOW >
-                </span>
+                </a>
                 <h2>CELEBRATE YOUR LOVE FOR BEAUTY</h2>
                 <p>
                     Happy New Year and it may bring you good health, appiness, <br/>
