--- a/about-us.html
+++ b/about-us.html
@@ -12,7 +12,7 @@
 <body>
     <header class="header flex-main">
         <img class="header__image" src="/src/images/winter-symbol.jpeg" alt="winter symbol">
-        <a href="/index.html">Back to the Shop</a>
+        <a href="/index.html">Home</a>
         <img class="header__image" src="/src/images/winter-symbol.jpeg" alt="winter symbol">
     </header>
 
