--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="logo"><span>Winter ⛄ Stuff</span></div>
         <a class="close-list1 close-list2" href="#">Home</a>
         <div class="drop">
-            <i class="fa-solid fa-list"> > Site</i>
+            <i class="fa-solid fa-list">> Site</i>
             <div id="nav-list-drop" class="flex-main hidden">
                 <a class="close-list1" href="#clothes">Clothes</a>
                 <a class="close-list1" href="#shoes">Shoes</a>
@@ -31,8 +31,8 @@
                 <a class="close-list1" href="#footer">Contact</a>
             </div>
         </div>
-        <div>
-            <i class="fa-solid fa-list"> > User</i>
+        <div class="drop2">
+            <i class="fa-solid fa-list">> User</i>
             <div id="user-nav-drop" class="flex-main hidden">
                 <i class="fa-solid fa-magnifying-glass close-list2"></i>
                 <a href="/cart.html" aria-label="shopping cart"><i class="fa-solid fa-cart-shopping"></i></a>
@@ -59,7 +59,7 @@
             <h2>Clothes</h2>
             <article class="warming grid-main">
                 <h3>HomeWear</h3>
-                <div class="warming__card flex-main">
+                <div class="warming__card">
                     <img src="/src/images/men-pajamas.webp" alt="Men's Pajamas">
                     <div class="warming__card-description flex-main">
                         <h4>Mens Striped pajamas</h4>
@@ -114,7 +114,7 @@
             </article>
         </section>
         <!-- clothes section end -->
-        
+
         <marquee class="flex-main" scrollamount="9">HAPPY SHOPPING 😄🛒 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; HAPPY SHOPPING 😄🛒 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; HAPPY SHOPPING 😄🛒 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; HAPPY SHOPPING 😄🛒 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; HAPPY SHOPPING 😄🛒</marquee>
 
         <!-- shoes section start -->
@@ -170,7 +170,7 @@
                 <div class="warming__card">
                     <img src="/src/images/kids-shoes.webp" alt="Kids's winter shoes">
                     <div class="warming__card-description flex-main">
-                        <h4>CHILDREN'S FLURRY™ BOOT</h4>
+                        <h4>Children's Flurry™ Boot</h4>
                         <p>Easy strap and barrel lock, super warm insulation keeps the kids cosy. They play more and slip less.
                         </p>
                         <h5>Price: €80.00 &nbsp;Click to buy <a aria-label="shopping cart" target="_blank" href="https://www.sorelfootwear.nl/NL/p/childrens-flurry-boot-1855252.html?dwvar_1855252_color=014"><i class="fa-solid fa-cart-shopping"></i></a></h5>
@@ -252,7 +252,7 @@
             <p>Wael AbuRayya</p>
             <p>&copy; Jan 2023 - All Rights Reserved ...</p>
         </section>
-        <section class="management flex-main">
+        <section id="footer-border" class="management flex-main">
             <h2>Contact</h2>
             <ul>
                 <li><a aria-label="phone icon" href="#"><i class="fa-solid fa-phone"></i></a> &nbsp; 0031 621 308 329</li>
