--- a/other.html
+++ b/other.html
@@ -18,7 +18,7 @@
         <img class="header__image" src="/src/images/winter-symbol.jpeg" alt="winter symbol">
         <a href="#">Common Winter-diseases</a>
         <img class="header__image" src="/src/images/winter-symbol.jpeg" alt="winter symbol">
-        <a href="/index.html">Back to the Shop</a>
+        <a href="/index.html">Home</a>
         <img class="header__image" src="/src/images/winter-symbol.jpeg" alt="winter symbol">
     </header>
 
