--- a/registration.html
+++ b/registration.html
@@ -12,7 +12,7 @@
 <body>
     <header class="header flex-main">
         <img class="header__image" src="/src/images/winter-symbol.jpeg" alt="winter symbol">
-        <a href="/index.html">Back to the Shop</a>
+        <a href="/index.html">Home</a>
         <img class="header__image" src="/src/images/winter-symbol.jpeg" alt="winter symbol">
     </header>
 
@@ -57,7 +57,7 @@
             <div>
                 <label for="message">Message</label>
                 <br>
-                <textarea id="message" name="message" cols="30" rows="9"></textarea>
+                <textarea id="message" name="message" cols="30" rows="5"></textarea>
             </div>
             <br>
             <button type="submit">Submit</button>
