mobile view tested

--- a/other.html
+++ b/other.html
@@ -16,6 +16,7 @@
         <img class="header__image" src="/src/images/winter-symbol.jpeg" alt="winter symbol">
         <a href="#">Winter Food</a>
         <img class="header__image" src="/src/images/winter-symbol.jpeg" alt="winter symbol">
+        <img class="header__image" src="/src/images/winter-symbol.jpeg" alt="winter symbol">
         <a href="#">Common Winter-diseases</a>
         <img class="header__image" src="/src/images/winter-symbol.jpeg" alt="winter symbol">
         <a href="/index.html">Home</a>
