cart page added

--- a/index.html
+++ b/index.html
@@ -12,15 +12,13 @@
 <body>
     <div class="container">
         <header>
-            <a href="#"><i class="fa-solid fa-house"></i></a>
-             online shopping
-             <a href="#kids">kids</a>
-             <a href="#women">Women</a>
-             <a href="#">Men</a>
-              <input type="text" placeholder="Search..">                
-              <a href="signup.html">Signup</a>
-              <a href="#"><i class="fa-solid fa-cart-shopping"></i>&nbsp Cart</a>
-              <a href="login.html"><i class="fa-solid fa-user"></i>&nbsp login</a>
+            <a href="index.html"><i class="fa-solid fa-house"></i></a>
+            <a href="#kids">kids</a>
+            <a href="#women">Women</a>
+            <a href="#men">Men</a>               
+            <a href="signup.html">Signup</a>
+            <a href="login.html"><i class="fa-solid fa-user"></i>&nbsp login</a>
+            <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i>&nbsp Cart</a>
         </header>
         <section>
         <div class="animation-image">
@@ -98,7 +96,7 @@
             </div>
             </section>
             <section>
-                <h2 id="women">Men</h2>
+                <h2 id="men">Men</h2>
                 <section class="main">
                 <div class="product card">
                     <img src="images\men1.jpg" alt="Product 1">
