--- a/signup.html
+++ b/signup.html
@@ -4,11 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
     <link rel="stylesheet" href="signup.css">
     <title>signup</title>
 </head>
 <body>
     <div class="container">
+        <header>
+            <a href="index.html"><i class="fa-solid fa-house"></i></a>
+             <a href="#">kids</a>
+             <a href="#">Women</a>
+             <a href="#">Men</a>
+             <!-- <input type="text" placeholder="Search.."> -->               
+              <a href="signup.html">Signup</a>
+              <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i>&nbsp Cart</a>
+              <a href="login.html"><i class="fa-solid fa-user"></i>&nbsp login</a>
+        </header>
+      <div class="signup">
         <h1>Sign up</h1>
         <form>
             <label for="username">Username:</label>
@@ -21,6 +33,9 @@
             <input type="password" id="password-confirm" name="password-confirm">
             <input type="submit" value="signup">
         </form>
+      </div>
+    </div>
+    </footer>
     </div>
 </body>
 </html>
