--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
 
     </header>
 
-    <br><br><br>
+    
+
+    <button class="menubtn"><a href="/menu.html">Check Menu</a></button>
 
 
     <!---main--->
@@ -81,8 +83,8 @@
         <div class="middle">
         <h1 class="fika">Fika Time</h1>
         <br>
-        <img src="/images/55.png" alt="Fika_time" width="600px" height="400px"><br><br>
-        <button><a href="/menu.html">Check Menu</a></button><br><br>
+        <img src="/images/55.png" alt="Fika_time"><br>
+        <!--button class="menubtn"><a href="/menu.html">Check Menu</a></button><br><br-->
         <p>Lorem ipsum, dolor sit amet consectetur ipsum molestiae? Impedit explicabo officia qui ratione necessitatibus obcaecati, ad dolore consequatur repellat. Hic, sunt.</p>
 
         </div>
