--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
             <label for="search-box" class="fas fa-search"></label>
         </div>
 
-        <!--div class="cart_item_container">
+        <div class="cart_item_container">
             <div class="cart_item">
                 <span class="fas fa-times"></span>
-                <img src="/images/dalgona.jpg" alt="Dalgona" width="450px" height="300px">
+                <img src="/images/dalgona.jpg" alt="Dalgona">
                 <div class="cart_content">
                     <h3>Dalgona</h3>
                     <div class="cart_item_price">$25</div>
@@ -69,13 +69,18 @@
                 </div>
 
             </div>
-        </div--->
+
+        
+            <button><a href="#" class="cartbtn">Checkout now</a></button>
+
+
+        </div>
 
     </header>
 
     
 
-    <button class="menubtn"><a href="/menu.html">Check Menu</a></button>
+    <button class="menubuton"><a href="/menu.html">Check Menu</a></button>
 
 
     <!---main--->
@@ -84,7 +89,7 @@
         <h1 class="fika">Fika Time</h1>
         <br>
         <img src="/images/55.png" alt="Fika_time"><br>
-        <!--button class="menubtn"><a href="/menu.html">Check Menu</a></button><br><br-->
+        <!--button class="menubtn"><a href="/menu.html">Check Menu</a></button-->
         <p>Lorem ipsum, dolor sit amet consectetur ipsum molestiae? Impedit explicabo officia qui ratione necessitatibus obcaecati, ad dolore consequatur repellat. Hic, sunt.</p>
 
         </div>
