--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="/about.html">About</a></li>
                 <li><a href="/menu.html">Menu</a></li>
-                <li><a href="/review.html">Review</a></li>
+                <li><a href="/review.html">Payment</a></li>
                 <li><a href="/contact.html">Contact</a></li>
             </ul>
 
@@ -73,7 +73,7 @@
             </div>
 
         
-            <button><a href="#" class="cartbtn">Checkout now</a></button>
+            <button><a href="/review.html" class="cartbtn">Checkout now</a></button>
 
 
         </div>
