--- a/review.html
+++ b/review.html
@@ -40,7 +40,7 @@
                 <li><a href="/index.html">Home</a></li>
                 <li><a href="/about.html">About</a></li>
                 <li><a href="/menu.html">Menu</a></li>
-                <li><a href="/review.html">Review</a></li>
+                <li><a href="/review.html">Payment</a></li>
                 <li><a href="/contact.html">Contact</a></li>
             </ul>
 
